--- a/vuz/hse/hse_nn.html
+++ b/vuz/hse/hse_nn.html
@@ -1,52 +1,101 @@
-<table border="1" cellpadding="0" cellspacing="0">
-	<tbody>
-		<tr>
-			<td><strong>Наименование конкурса</strong></td>
-			<td><strong>Ссылка</strong></td>
-		</tr>
+<tbody>
 		<tr>
 			<td>Бакалаврская программа «Международный бакалавриат по бизнесу и экономике»</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_MBBE.xlsx">https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_MBBE.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_OM_NN_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_K_OM_NN_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_BVI_NN_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_Os_NN_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_SP_NN_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_TS_NN_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
-			<td>Бизнес информатика</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_BI.xlsx">https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_BI.xlsx</a><!--/noindex--></td>
+			<td>Бизнес-информатика</td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_OM_NN_BI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_K_OM_NN_BI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_BVI_NN_BI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_Os_NN_BI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_SP_NN_BI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_TS_NN_BI.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Дизайн</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_Design.xlsx">https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_Design.xlsx</a><!--/noindex--></td>
+			<td>&nbsp;</td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_K_OM_NN_Diz.xlsx?roistat_visit=1985729">Список</a></td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
 		</tr>
 		<tr>
 			<td>Иностранные языки и межкультурная бизнес-коммуникация</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_InYaz.xlsx">https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_InYaz.xlsx</a><!--/noindex--></td>
+			<td>&nbsp;</td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_K_OM_NN_IYaiMK.xlsx?roistat_visit=1985729">Список</a></td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
 		</tr>
 		<tr>
 			<td>Математика</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_Math.xlsx">https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_Math.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_OM_NN_Mat.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_K_OM_NN_Mat.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_BVI_NN_Mat.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_Os_NN_Mat.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_SP_NN_Mat.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_TS_NN_Mat.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Прикладная математика и информатика</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_AMI.xlsx">https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_AMI.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_OM_NN_PMiI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_K_OM_NN_PMiI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_BVI_NN_PMiI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_Os_NN_PMiI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_SP_NN_PMiI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_TS_NN_PMiI.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Программная инженерия</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_SE.xlsx">https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_SE.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_OM_NN_PI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_K_OM_NN_PI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_BVI_NN_PI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_Os_NN_PI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_SP_NN_PI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_TS_NN_PI.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Филология</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_Philology.xlsx">https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_Philology.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_OM_NN_Fil.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_K_OM_NN_Fil.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_BVI_NN_Fil.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_Os_NN_Fil.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_SP_NN_Fil.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_TS_NN_Fil.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Фундаментальная и прикладная лингвистика</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_Ling.xlsx">https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_Ling.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_OM_NN_FiPL.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_K_OM_NN_FiPL.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_BVI_NN_FiPL.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_Os_NN_FiPL.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_SP_NN_FiPL.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_TS_NN_FiPL.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Цифровой маркетинг</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_DM.xlsx">https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_DM.xlsx</a><!--/noindex--></td>
+			<td>&nbsp;</td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_K_OM_NN_TSM.xlsx?roistat_visit=1985729">Список</a></td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
 		</tr>
 		<tr>
 			<td>Юриспруденция</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_Ur.xlsx">https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/BD_NN_Ur.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_OM_NN_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_K_OM_NN_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_BVI_NN_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_Os_NN_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_SP_NN_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/nn/Bachelors/KS_NN_B_TS_NN_YUR.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 	</tbody>
-</table>
