--- a/vuz/hse/hse_p.html
+++ b/vuz/hse/hse_p.html
@@ -1,36 +1,56 @@
-<table border="1" cellpadding="0" cellspacing="0">
-	<tbody>
-		<tr>
-			<td><strong>Наименование конкурса</strong></td>
-			<td><strong>Ссылка</strong></td>
-		</tr>
-		<tr>
-			<td>Дизайн</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_Design.xlsx">https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_Design.xlsx</a><!--/noindex--></td>
-		</tr>
-		<tr>
-			<td>Иностранные языки и межкультурная коммуникация</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_InYaz.xlsx">https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_InYaz.xlsx</a><!--/noindex--></td>
+<tbody>
+		<tr class="active">
+			<td>Иностранные языки и межкультурная коммуникация в бизнесе</td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_OM_P_IYaiMK.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_K_OM_P_IYaiMK.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_BVI_P_IYaiMK.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_Os_P_IYaiMK.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_SP_P_IYaiMK.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_TS_P_IYaiMK.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>История</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_ISTR.xlsx">https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_ISTR.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_OM_P_IST.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_K_OM_P_IST.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_BVI_P_IST.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_Os_P_IST.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_SP_P_IST.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_TS_P_IST.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Международный бакалавриат по бизнесу и экономике</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_MBBE.xlsx">https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_MBBE.xlsx</a><!--/noindex--></td>
-		</tr>
-		<tr>
-			<td>Разработка информационных систем для бизнеса (Бизнес-информатика)</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_Isystems.xlsx">https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_Isystems.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_OM_P_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_K_OM_P_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_BVI_P_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_Os_P_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_SP_P_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_TS_P_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Разработка информационных систем для бизнеса (Программная инженерия)</td>
-			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_Isystems_PI.xlsx">https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_Isystems_PI.xlsx</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_OM_P_RISB_PI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_K_OM_P_RISB_PI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_BVI_P_RISB_PI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_Os_P_RISB_PI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_SP_P_RISB_PI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_TS_P_RISB_PI.xlsx?roistat_visit=1985729">Список</a></td>
+		</tr>
+		<tr>
+			<td>Разработка информационных систем для бизнеса (Бизнес-информатика)</td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_OM_P_RISB_BI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_K_OM_P_RISB_BI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_BVI_P_RISB_BI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_Os_P_RISB_BI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_SP_P_RISB_BI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_TS_P_RISB_BI.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Юриспруденция</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_Ur.xlsx">https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/BD_Perm_Ur.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_OM_P_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_K_OM_P_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_BVI_P_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_Os_P_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_SP_P_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/perm/Bachelors/KS_P_B_TS_P_YUR.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 	</tbody>
-</table>
