--- a/vuz/hse/hse_spb.html
+++ b/vuz/hse/hse_spb.html
@@ -1,64 +1,119 @@
-<table border="1" cellpadding="0" cellspacing="0">
-	<tbody>
-		<tr>
-			<td><strong>Наименование конкурса</strong></td>
-			<td><strong>Ссылка</strong></td>
-		</tr>
+<tbody>
 		<tr>
 			<td>Бакалаврская программа «Международный бакалавриат по бизнесу и экономике»</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_MBBE.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_MBBE.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_OM_S_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_OM_S_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_BVI_S_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_Os_S_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_SP_S_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_TS_S_MBBE.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Востоковедение</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Vostok.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Vostok.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_OM_S_Vostok.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_OM_S_Vostok.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_BVI_S_Vostok.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_Os_S_Vostok.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_SP_S_Vostok.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_TS_S_Vostok.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Дизайн</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Design.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Design.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_OM_S_Diz.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_OM_S_Diz.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_BVI_S_Diz.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_Os_S_Diz.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_SP_S_Diz.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_TS_S_Diz.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>История</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_ISTR.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_ISTR.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_OM_S_IST.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_OM_S_IST.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_BVI_S_IST.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_Os_S_IST.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_SP_S_IST.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_TS_S_IST.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Медиакоммуникации</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Media.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Media.xlsx</a><!--/noindex--></td>
+			<td>&nbsp;</td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_OM_S_Media.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_BVI_S_Media.xlsx?roistat_visit=1985729">Список</a></td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
 		</tr>
 		<tr>
 			<td>Политология и мировая политика</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_PMP.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_PMP.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_OM_S_Polit.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_OM_S_Polit.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_BVI_S_Polit.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_Os_S_Polit.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_SP_S_Polit.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_TS_S_Polit.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Прикладная математика и информатика</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_AMI.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_AMI.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_OM_S_PMiI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_OM_S_PMiI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_BVI_S_PMiI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_Os_S_PMiI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_SP_S_PMiI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_TS_S_PMiI.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Прикладной анализ данных и искусственный интеллект</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_PADII.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_PADII.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_OM_S_PADI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_OM_S_PADI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_BVI_S_PADI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_Os_S_PADI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_SP_S_PADI.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_TS_S_PADI.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Социология и социальная информатика</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Soc.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Soc.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_OM_S_Sots.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_OM_S_Sots.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_BVI_S_Sots.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_Os_S_Sots.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_SP_S_Sots.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_TS_S_Sots.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Управление&nbsp; и аналитика в государственном секторе</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_gmu.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_gmu.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_OM_S_UAGS.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_OM_S_UAGS.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_BVI_S_UAGS.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_Os_S_UAGS.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_SP_S_UAGS.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_TS_S_UAGS.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Физика</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Physics.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Physics.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_OM_S_Fiz.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_OM_S_Fiz.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_BVI_S_Fiz.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_Os_S_Fiz.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_SP_S_Fiz.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_TS_S_Fiz.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Филология</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Philology.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Philology.xlsx</a><!--/noindex--></td>
-		</tr>
-		<tr>
-			<td>Цифровые платформы и логистика</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_dpl.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_dpl.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_OM_S_Fil.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_OM_S_Fil.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_BVI_S_Fil.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_Os_S_Fil.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_SP_S_Fil.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_TS_S_Fil.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 		<tr>
 			<td>Юриспруденция</td>
-			<td><!--noindex--><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Ur.xlsx">https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/BD_SPB_Ur.xlsx</a><!--/noindex--></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_OM_S_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_K_OM_S_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_BVI_S_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_Os_S_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_SP_S_YUR.xlsx?roistat_visit=1985729">Список</a></td>
+			<td><a href="https://enrol.hse.ru/storage/public_report_2022/spb/Bachelors/KS_SPb_B_TS_S_YUR.xlsx?roistat_visit=1985729">Список</a></td>
 		</tr>
 	</tbody>
-</table>
